--- a/bower.json
+++ b/bower.json
@@ -2,13 +2,8 @@
   "name": "ember-inplace-edit",
   "version": "0.2.1",
   "authors": [
+    "Mike Szörnyi",
     "Christoph Groß"
   ],
-  "license": "MIT",
-  "ignore": [
-    "**/.*"
-  ],
-  "dependencies": {
-    "ember": "^1.3.0"
-  }
+  "license": "MIT"
 }
